# crypt-env

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  context.md  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
.github/workflows/: release.yml
docs/: building.md
scripts/: bump-version.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/biometric/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/share/: crypto.rs  lan.rs  mod.rs  package.rs  protocol.rs
src-tauri/src/tls/: mod.rs
src-tauri/src/vault/: import.rs  mod.rs  share_commands.rs
src/components/: BackupModal.tsx  CategoryManager.tsx  EditItem.tsx  ImportModal.tsx  LockScreen.tsx  MainVault.tsx  ReceiveModal.tsx  Settings.tsx  ShareModal.tsx  WindowChrome.tsx
src/components/rows/: CommandRow.tsx  CredentialRow.tsx  LinkRow.tsx  NoteRow.tsx  SecretRow.tsx
src/components/ui/: CmdHL.tsx  ContextMenu.tsx  CopyBtn.tsx  Icon.tsx  KebabBtn.tsx  PlaceholderModal.tsx  TagInput.tsx  Toast.tsx
src/hooks/: useAutoLock.ts
src/store/: index.ts
src/types/: index.ts
